Fix tooltips overflow

--- a/core/css/tooltip.scss
+++ b/core/css/tooltip.scss
@@ -25,7 +25,7 @@
     text-shadow: none;
     text-transform: none;
     white-space: normal;
-    word-break: normal;
+    word-break: break-all;
     word-spacing: normal;
     word-wrap: normal;
     font-size: 12px;
